# A2A_Implementation

./: README.md  a2a-mcp-working-final.7z  a2a-mcp-working26-02.7z  agent_discovery.py  agent_registry.json  main.py  mcp_README.md  pyproject.toml  requirements.txt  test_message_send.json
agent/: __init__.py  __main__.py  agent_executor.py  langgraph_agent.py
agents/host_agent/: agent_connect.py  entry.py  orchestrator.py
agents/portfolio/: __main__.py  agent.py  mcp_client.py  task_manager.py
agents/validator/: __main__.py  agent.py  task_manager.py
app/: host_client.py  streamlit_app.py
host/: __init__.py  __main__.py  host_executor.py
mcp_agent/: __init__.py  __main__.py  mcp_agent_executor.py  mcp_langgraph_agent.py
mcp_connector/: __init__.py  mcp_connector.py
mcp_registry/: server.json
server/: server.py
utilities/: agent_registry.json  discovery.py
